# python-project-lvl2

./: .gitignore  LICENCE  Makefile  README.md  pyproject.toml
.github/workflows/: Tests-check.yml
gendiff/: gendiff.py  generate_diff.py  stylish.py
gendiff/formaters/: to_str.py
gendiff/formaters/_json/: _json.py
gendiff/formaters/plain/: plain.py
gendiff/formaters/stylish/: stylish.py
gendiff/parsers/: parse.py
gendiff/scripts/: gendiff.py  gendiff_main.py
tests/: test_create_diff.py  test_generate_diff.py  test_json.py  test_parse.py  test_plain.py  test_stylish.py
tests/fixtures/: create_diff_result.txt  file1_result.txt  file2_result.txt  gendiff_result.txt  json_result.txt  plain_result.txt
