[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = "Hexlet project #2"
authors = ["Alexander Izvekov <izvekov.web@yandex.ru>"]
license = "MIT"
packages = [
  { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff_main:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
